@@ -12,4 +12,5 @@ t/02order.t
 t/03throw-non-Error.t
 t/04use-base-Error-Simple.t
 t/05text-errors-with-file-handles.t
+t/06customize-text-throw.t
 t/lib/MyDie.pm
